--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -116,28 +116,6 @@ main {
   line-height: 14px;
 }
 
-.skills-container {
-  grid-column: 1 / span 2;
-}
-
-.skills-container > ul,
-.free-text {
-  font-family: var(--free-text-font);
-  font-weight: 400;
-  color: #222222;
-}
-
-.skills-container > ul {
-  font-size: 16px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-}
-
-li {
-  list-style: none;
-}
-
 /* Personal input styles */
 
 .personal-input {
@@ -197,18 +175,31 @@ input[type="url"] {
   grid-template: 1fr 1fr / auto auto;
   gap: 1rem;
   justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 button.add,
 button.delete {
-  font-size: 15px;
   font-weight: 600;
+  padding: 4px;
+  font-family: var(--free-text-font);
+  cursor: pointer;
   border: none;
   border-radius: 8px;
-  padding: 4px;
-  cursor: pointer;
+}
+
+button.add {
+  font-size: 17px;
   width: 100%;
-  font-family: var(--free-text-font);
+}
+
+button.delete {
+  grid-column: 1 / span 2;
+  font-size: 13px;
+}
+button.add:hover,
+button.delete:hover {
+  filter: opacity(55%);
 }
 
 input[type="date"] {
@@ -224,7 +215,6 @@ input[type="date"] {
 
 textarea {
   font-family: var(--free-text-font);
-  margin-bottom: 5px;
   text-indent: 5px;
   border: 1px solid #444;
   border-radius: 5px;
@@ -245,6 +235,7 @@ textarea {
   grid-template: 1fr 1fr / auto auto;
   gap: 1rem;
   justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 /* Skills input styles */
@@ -256,8 +247,34 @@ textarea {
 .skills-input--form {
   display: flex;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 
+.skills-container {
+  grid-column: 1 / span 2;
+}
+
+.skills-container > ul,
+.free-text {
+  font-family: var(--free-text-font);
+  font-weight: 400;
+  color: #222222;
+}
+
+.skills-container > ul {
+  font-size: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+li {
+  list-style: none;
+}
+
+form {
+  margin-bottom: 2rem;
+}
 /* Media queries */
 
 @media only screen and (max-width: 1000px) {
